[gd_scene load_steps=33 format=2]

[ext_resource path="res://scripts/enemy.gd" type="Script" id=1]
[ext_resource path="res://sprites/Sprites/Enemy/idle1.png" type="Texture" id=2]
[ext_resource path="res://sprites/Sprites/Enemy/idle2.png" type="Texture" id=3]
[ext_resource path="res://sprites/Sprites/Enemy/walk1.png" type="Texture" id=4]
[ext_resource path="res://sprites/Sprites/Enemy/ezgif.com-crop (2).png" type="Texture" id=5]
[ext_resource path="res://sprites/Sprites/Enemy/walk3.png" type="Texture" id=6]
[ext_resource path="res://sprites/Sprites/Enemy/ezgif.com-crop (4).png" type="Texture" id=7]
[ext_resource path="res://sprites/Sprites/Enemy/hitted02.png" type="Texture" id=8]
[ext_resource path="res://sprites/Sprites/Enemy/hitted.png" type="Texture" id=9]
[ext_resource path="res://sprites/Sprites/Enemy/dying1.png" type="Texture" id=10]
[ext_resource path="res://sprites/Sprites/Enemy/dying2.png" type="Texture" id=11]
[ext_resource path="res://sprites/Sprites/Enemy/dying3.png" type="Texture" id=12]
[ext_resource path="res://sprites/Sprites/Enemy/dying4.png" type="Texture" id=13]
[ext_resource path="res://sprites/Sprites/Enemy/dying5.png" type="Texture" id=14]
[ext_resource path="res://sprites/Sprites/Enemy/dying6.png" type="Texture" id=15]
[ext_resource path="res://sprites/Sprites/Enemy/dying7.png" type="Texture" id=16]
[ext_resource path="res://sprites/Sprites/Enemy/dying8.png" type="Texture" id=17]
[ext_resource path="res://sprites/Sprites/Enemy/atack1.png" type="Texture" id=18]
[ext_resource path="res://sprites/Sprites/Enemy/atack2.png" type="Texture" id=19]
[ext_resource path="res://sprites/Sprites/Enemy/atack3.png" type="Texture" id=20]
[ext_resource path="res://sprites/Sprites/Enemy/atack4.png" type="Texture" id=21]
[ext_resource path="res://sprites/Sprites/Enemy/atack5.png" type="Texture" id=22]
[ext_resource path="res://sprites/Sprites/Enemy/atack6.png" type="Texture" id=23]
[ext_resource path="res://sprites/Sprites/Enemy/atack7.png" type="Texture" id=24]

[sub_resource type="CapsuleShape2D" id=1]
radius = 80.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 2.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ) ],
"loop": false,
"name": "hitted",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ) ],
"loop": false,
"name": "dyingAnim",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ) ],
"loop": false,
"name": "clawAtack",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=5]
radius = 80.0

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 80, 15 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 869.549, 254.497 )

[sub_resource type="OccluderPolygon2D" id=8]
polygon = PoolVector2Array( -80, 0, 0, -80, 0, -80, 42.8743, -37.1257, 80, 0, 0, 80 )

[node name="Enemy" type="KinematicBody2D"]
position = Vector2( 416, 192 )
scale = Vector2( 0.4, 0.4 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
scale = Vector2( 1, 0.8 )
z_index = 1
shape = SubResource( 1 )

[node name="wolf" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "hitted"

[node name="dying" type="AnimatedSprite" parent="."]
position = Vector2( 0, 15 )
frames = SubResource( 3 )
animation = "dyingAnim"

[node name="atack" type="AnimatedSprite" parent="."]
frames = SubResource( 4 )
animation = "clawAtack"

[node name="hitbox" type="Area2D" parent="."]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2( 0, -5.00003 )
shape = SubResource( 5 )

[node name="Area2D" type="Area2D" parent="."]
editor/display_folded = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 25 )
scale = Vector2( 1.5, 1.5 )
shape = SubResource( 6 )

[node name="SeekArea" type="Area2D" parent="."]

[node name="SeekShape" type="CollisionShape2D" parent="SeekArea"]
position = Vector2( -2.03638, -169.011 )
shape = SubResource( 7 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
scale = Vector2( 0.6, 0.6 )
occluder = SubResource( 8 )

[node name="next_dir_timer" type="Timer" parent="."]
wait_time = 0.4

[node name="seek_timer" type="Timer" parent="."]
wait_time = 7.0
[connection signal="animation_finished" from="dying" to="." method="_on_dying_animation_finished"]
[connection signal="animation_finished" from="atack" to="." method="_on_atack_animation_finished"]
[connection signal="body_shape_entered" from="hitbox" to="." method="_on_hitbox_body_shape_entered"]
[connection signal="body_shape_entered" from="Area2D" to="." method="_on_Area2D_body_shape_entered"]
[connection signal="body_entered" from="SeekArea" to="." method="_on_SeekArea_body_entered"]
[connection signal="timeout" from="next_dir_timer" to="." method="_on_next_dir_timer_timeout"]
[connection signal="timeout" from="seek_timer" to="." method="_on_seek_timer_timeout"]
